--- a/src/main/resources/templates/ListaResultados.html
+++ b/src/main/resources/templates/ListaResultados.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width" />
 	
-	<title>Lista de alunos</title>
+	<title>Lista de Resultados</title>
 	
 	<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>	
     <link th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
@@ -16,10 +16,22 @@
 	<div class="panel panel-default" style="margin: 10px">
 		<div class="panel-heading">
    			<h1 class="panel-title">Cadastrar Resultado</h1>
-   			<form class="form-inline" method="POST" th:action="@{/alunos}"
-				th:object="${aluno}" style="margin: 20px 0">
+   			<form class="form-inline" method="POST" th:action="@{/resultados}"
+				th:object="${resultado}" style="margin: 20px 0">
 				<div class="form-group">
+					<label for="medidas.braco_esquerdo">Braço Esquerdo:</label>
 					<input type="text" class="form-control" id="medidas.braco_esquerdo" th:field="*{medidas.braco_esquerdo}" placeholder="Nome" />
+					<label for="medidas.braco_esquerdo">Braço Direito:</label>
+					<input type="text" class="form-control" id="medidas.braco_direito" th:field="*{medidas.braco_direito}" placeholder="Nome" />
+					<label for="medidas.braco_esquerdo">Coxa Esquerda:</label>
+					<input type="text" class="form-control" id="medidas.coxa_esquerda" th:field="*{medidas.coxa_esquerda}" placeholder="Nome" />
+					<label for="medidas.braco_esquerdo">Coxa Direita:</label>
+					<input type="text" class="form-control" id="medidas.coxa_direita" th:field="*{medidas.coxa_direita}" placeholder="Nome" />
+					<label for="medidas.peito">Peito:</label>
+					<input type="text" class="form-control" id="medidas.peito" th:field="*{medidas.peito}" placeholder="Nome" />
+					<label for="medidas.percentual_gordura">Percentual de Gordura:</label>
+					<input type="text" class="form-control" id="medidas.percentual_gordura" th:field="*{medidas.percentual_gordura}" placeholder="Nome" />
+					<button type="submit" class="btn btn-primary">Adicionar</button>
 				</div>
 			</form>
 	   	</div>
@@ -32,24 +44,25 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th>Nome</th>
-						<th>CPF</th>
-						<th>Endereço</th>
-						<th>Data Nascimento</th>
-						<th>Email</th>
-						<th>Telefone</th>
+						<th>Data de Cadastro</th>
+						<th>Braço Esquerdo</th>
+						<th>Braço Direito</th>
+						<th>Coxa Esquerda</th>
+						<th>Coxa Direita</th>
+						<th>Peito</th>
+						<th>Percentual de Gordura</th>
 					</tr>
 				</thead>
 				
 				<tbody>
 					<tr th:each="resultado : ${resultados}">
 					 	<td th:text="${resultado.data_de_cadastro}"></td>
-						<td th:text="${resultado.medida.braco_esquerdo}"></td>
-					<!--	<td th:text="${aluno.endereco}"></td>
-						<td th:text="${aluno.data_nascimento}"></td>
-						<td th:text="${aluno.email}"></td>
-						<td th:text="${aluno.telefone}"></td>
-					</tr>-->
+						<td th:text="${resultado.medidas.braco_esquerdo}"></td>
+						<td th:text="${resultado.medidas.braco_direito}"></td>
+						<td th:text="${resultado.medidas.coxa_esquerda}"></td>
+						<td th:text="${resultado.medidas.coxa_direita}"></td>
+						<td th:text="${resultado.medidas.peito}"></td>
+						<td th:text="${resultado.medidas.percentual_gordura}"></td>
 				</tbody>
 			</table>
 		</div>
