--- a/src/main/resources/templates/ListaResultados.html
+++ b/src/main/resources/templates/ListaResultados.html
@@ -6,8 +6,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width" />
 	
-	<title>Lista de Resultados</title>
-	
+	<title>Lista de Resultados </title>
 	<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>	
     <link th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
     
@@ -15,7 +14,7 @@
 <body>
 	<div class="panel panel-default" style="margin: 10px">
 		<div class="panel-heading">
-   			<h1 class="panel-title">Cadastrar Resultado</h1>
+   			<h1 class="panel-title">Cadastrar Resultado <tr th:object="${aluno}"><td th:text="${aluno.nome}"></td></h1>
    			<form class="form-inline" method="POST" th:action="@{/resultados}"
 				th:object="${resultado}" style="margin: 20px 0">
 				<div class="form-group">
@@ -39,7 +38,7 @@
 	   	<div class="panel-body">
 
 			<div class="panel-heading">
-   				<h1 class="panel-title">Lista de Resultados</h1>
+   				<h1 class="panel-title">Lista de Resultados <tr th:object="${aluno}"><td th:text="${aluno.nome}"></td></h1>
 	   		</div>
 			<table class="table">
 				<thead>
