--- a/src/main/resources/templates/ListaAlunos.html
+++ b/src/main/resources/templates/ListaAlunos.html
@@ -1,52 +1,64 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org">
-    
-<head>
-	<meta charset="UTF-8"/>
-	<meta name="viewport" content="width=device-width" />
-	
-	<title>Lista de alunos</title>
-	
-	<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>	
-    <link th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
-    
+<!DOCTYPE html>	
+	<html xmlns:th="http://www.thymeleaf.org">
+
+<head th:include="fragments/header :: header">
+  
 </head>
-<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"><img src="https://peakfitness14.files.wordpress.com/2014/10/chicken-legs.jpg" width="60" height="60" class="d-inline-block align-top" alt=""> BIR</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="/alunos">Alunos</a>
+      <a class="nav-item nav-link" href="/resultados">Resultados</a>
+      <a class="nav-item nav-link disabled" >Exercicios</a>
+    </div>
+  </div>
+</nav>
+<body class="px-4">
 	<div class="panel panel-default" style="margin: 10px">
-		<div class="panel-heading">
-   			<h1 class="panel-title">Cadastrar Aluno </h1>
-	   	</div>
-	   	
-	   	<div class="panel-body">
+		<div class="card card my-1">
+			<div class="card-header">
+				<h1 class="card-title">Cadastrar Aluno</h1>
+			</div>
 			<form class="form-inline" method="POST" th:action="@{/alunos}"
 				th:object="${aluno}" style="margin: 20px 0">
 				<div class="form-group">
-					<input type="text" class="form-control" id="nome" th:field="*{nome}" placeholder="Nome" /> 
-					<input type="text" class="form-control" id="cpf" th:field="*{cpf}" placeholder="cpf" />
-					<input type="text" class="form-control" id="endereco" th:field="*{endereco}" placeholder="EndereÃ§o" />
-					<input type="text" class="form-control" id="data_nascimento" th:field="*{data_nascimento}" placeholder="Data de Nascimento" />
-					<input type="text" class="form-control" id="email" th:field="*{email}" placeholder="Email" />
-					<input type="text" class="form-control" id="telefone" th:field="*{telefone}" placeholder="telefone" />
+					<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="nome"
+						th:field="*{nome}" placeholder="Nome" />
+						<input class="form-control mb-2 mr-sm-2 mb-sm-0" type="number" value="42" id="cpf" th:field="*{cpf}" placeholder="cpf">
+					<input type="number" class="form-control mb-2 mr-sm-2 mb-sm-0" id="endereco"
+						th:field="*{endereco}" placeholder="Endereço" /> <input
+						type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="data_nascimento"
+						th:field="*{data_nascimento}" placeholder="Data de Nascimento" />
+					<input type="email" class="form-control mb-2 mr-sm-2 mb-sm-0" id="email"
+						th:field="*{email}" placeholder="Email" /> <input type="text"
+						class="form-control mb-2 mr-sm-2 mb-sm-0" id="telefone" th:field="*{telefone}"
+						placeholder="telefone" />
 					<button type="submit" class="btn btn-primary">Adicionar</button>
 				</div>
 			</form>
-
-			<div class="panel-heading">
-   				<h1 class="panel-title">Lista de Alunos</h1>
-	   		</div>
+			</div>
+			
+			<div class="card card my-1">
+			<div class="card-header">
+				<h1 class="card-title">Alunos Cadastrados</h1>
+			</div>
 			<table class="table">
 				<thead>
 					<tr>
 						<th>Nome</th>
 						<th>CPF</th>
-						<th>EndereÃ§o</th>
+						<th>Endereço</th>
 						<th>Data Nascimento</th>
 						<th>Email</th>
 						<th>Telefone</th>
 					</tr>
 				</thead>
-				
+
 				<tbody>
 					<tr th:each="aluno : ${alunos}">
 						<td th:text="${aluno.nome}"></td>
@@ -60,7 +72,7 @@
 			</table>
 		</div>
 	</div>
-	
+
 	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </body>
