Added home page and menu to single file

--- a/src/main/resources/templates/ListaAlunos.html
+++ b/src/main/resources/templates/ListaAlunos.html
@@ -1,23 +1,8 @@
 <!DOCTYPE html>	
 	<html xmlns:th="http://www.thymeleaf.org">
 
-<head th:include="fragments/header :: header">
-  
-</head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="https://peakfitness14.files.wordpress.com/2014/10/chicken-legs.jpg" width="60" height="60" class="d-inline-block align-top" alt=""> BIR</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/alunos">Alunos</a>
-      <a class="nav-item nav-link" href="/resultados">Resultados</a>
-      <a class="nav-item nav-link disabled" >Exercicios</a>
-    </div>
-  </div>
-</nav>
+<head th:include="fragments/header :: header"></head>
+
 <body class="px-4">
 	<div class="panel panel-default" style="margin: 10px">
 		<div class="card card my-1">
