--- a/src/main/resources/templates/ListaAlunos.html
+++ b/src/main/resources/templates/ListaAlunos.html
@@ -14,7 +14,8 @@
 				<div class="form-group">
 					<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="nome"
 						th:field="*{nome}" placeholder="Nome" />
-						<input class="form-control mb-2 mr-sm-2 mb-sm-0" type="number" value="42" id="cpf" th:field="*{cpf}" placeholder="cpf">
+						
+						<input class="form-control mb-2 mr-sm-2 mb-sm-0" type="number" id="cpf" th:field="*{cpf}" placeholder="cpf">
 					<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="endereco"
 						th:field="*{endereco}" placeholder="Endereço" /> <input
 						type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="data_nascimento"
