--- a/src/main/resources/templates/ListaResultados.html
+++ b/src/main/resources/templates/ListaResultados.html
@@ -6,23 +6,23 @@
 	<div class="panel panel-default" style="margin: 10px">
 	<div class="card card my-1 px-1">
 			<div class="card-header">
-				<h1 class="card-title">Cadastrar Resultado <tr th:object="${aluno}"><td th:text="${aluno.nome}"></td></h1>
+				<h1 class="card-title">Cadastrar Resultado</h1>
 			</div>
    			<form class="form-group" method="POST" th:action="@{/resultados}"
 				th:object="${resultado}" style="margin: 20px 0">
 				<div class="form-group">
-					<label for="medidas.braco_esquerdo">Braço Esquerdo:</label>
-					<input type="text" class="form-control" id="medidas.braco_esquerdo" th:field="*{medidas.braco_esquerdo}" placeholder="Nome" />
-					<label for="medidas.braco_esquerdo">Braço Direito:</label>
-					<input type="text" class="form-control" id="medidas.braco_direito" th:field="*{medidas.braco_direito}" placeholder="Nome" />
-					<label for="medidas.braco_esquerdo">Coxa Esquerda:</label>
-					<input type="text" class="form-control" id="medidas.coxa_esquerda" th:field="*{medidas.coxa_esquerda}" placeholder="Nome" />
-					<label for="medidas.braco_esquerdo">Coxa Direita:</label>
-					<input type="text" class="form-control" id="medidas.coxa_direita" th:field="*{medidas.coxa_direita}" placeholder="Nome" />
-					<label for="medidas.peito">Peito:</label>
-					<input type="text" class="form-control" id="medidas.peito" th:field="*{medidas.peito}" placeholder="Nome" />
-					<label for="medidas.percentual_gordura">Percentual de Gordura:</label>
-					<input type="text" class="form-control" id="medidas.percentual_gordura" th:field="*{medidas.percentual_gordura}" placeholder="Nome" />
+					<label for="medida.braco_esquerdo">Braço Esquerdo:</label>
+					<input type="text" class="form-control" id="medida.braco_esquerdo" th:field="*{medida.braco_esquerdo}" placeholder="Nome" />
+					<label for="medida.braco_esquerdo">Braço Direito:</label>
+					<input type="text" class="form-control" id="medida.braco_direito" th:field="*{medida.braco_direito}" placeholder="Nome" />
+					<label for="medida.braco_esquerdo">Coxa Esquerda:</label>
+					<input type="text" class="form-control" id="medida.coxa_esquerda" th:field="*{medida.coxa_esquerda}" placeholder="Nome" />
+					<label for="medida.braco_esquerdo">Coxa Direita:</label>
+					<input type="text" class="form-control" id="medida.coxa_direita" th:field="*{medida.coxa_direita}" placeholder="Nome" />
+					<label for="medida.peito">Peito:</label>
+					<input type="text" class="form-control" id="medida.peito" th:field="*{medida.peito}" placeholder="Nome" />
+					<label for="medida.percentual_gordura">Percentual de Gordura:</label>
+					<input type="text" class="form-control" id="medida.percentual_gordura" th:field="*{medida.percentual_gordura}" placeholder="Nome" />
 					<button type="submit" class="btn btn-primary">Adicionar Resultado</button>
 				</div>
 			</form>
@@ -31,7 +31,7 @@
 	   	<div class="panel-body">
 	   	<div class="card card my-1 px-1">
 			<div class="card-header">
-				<h1 class="card-title">Lista Resultados <tr th:object="${aluno}"><td th:text="${aluno.nome}"></td></h1>
+				<h1 class="card-title">Lista Resultados</h1>
 			</div>
 			<table class="table">
 				<thead>
@@ -49,12 +49,12 @@
 				<tbody>
 					<tr th:each="resultado : ${resultados}">
 					 	<td th:text="${resultado.data_de_cadastro}"></td>
-						<td th:text="${resultado.medidas.braco_esquerdo}"></td>
-						<td th:text="${resultado.medidas.braco_direito}"></td>
-						<td th:text="${resultado.medidas.coxa_esquerda}"></td>
-						<td th:text="${resultado.medidas.coxa_direita}"></td>
-						<td th:text="${resultado.medidas.peito}"></td>
-						<td th:text="${resultado.medidas.percentual_gordura}"></td>
+						<td th:text="${resultado.medida.braco_esquerdo}"></td>
+						<td th:text="${resultado.medida.braco_direito}"></td>
+						<td th:text="${resultado.medida.coxa_esquerda}"></td>
+						<td th:text="${resultado.medida.coxa_direita}"></td>
+						<td th:text="${resultado.medida.peito}"></td>
+						<td th:text="${resultado.medida.percentual_gordura}"></td>
 				</tbody>
 			</table>
 		</div>
