--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,7 +2,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width" />
-      <title>Lista de alunos</title>
+      <title>BIR</title>
       <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
@@ -30,7 +30,7 @@
                <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
                <a class="nav-item nav-link" href="/alunos">Alunos</a>
                <a class="nav-item nav-link" href="/resultados">Resultados</a>
-               <a class="nav-item nav-link disabled" >Exercicios</a>
+               <a class="nav-item nav-link" href="/exercicios">Exercicios</a>
             </div>
          </div>
       </nav>
