--- a/src/main/resources/templates/listaSeries.html
+++ b/src/main/resources/templates/listaSeries.html
@@ -9,7 +9,27 @@
 			<div class="card-header">
 				<h1 class="card-title">Cadastrar Serie</h1>
 			</div>
-			<form >
+			<form class="form-group" method="POST" th:action="@{/series}"
+				th:object="${serie}" style="margin: 20px 0">
+				<div class="form-group">
+					<label for="tipo">Tipo:</label>
+					<input type="text" class="form-control" id="tipo" th:field="*{tipo}" placeholder="Tipo" />
+					<label for="tipo">Frequencia:</label>
+					<input type="text" class="form-control" id="repeticao" th:field="*{repeticao}" placeholder="repeticao" />
+					<h3>Exercicio 1</h3>
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[0].nome}" placeholder="nome" />
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[0].sequencia}" placeholder="sequencia" />
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[0].repeticoes}" placeholder="repeticao" />
+					<h3>Exercicio 2</h3>
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[1].nome}" placeholder="nome" />
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[1].sequencia}" placeholder="sequencia" />
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[1].repeticoes}" placeholder="repeticao" />
+					<h3>Exercicio 3</h3>
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[2].nome}" placeholder="nome" />
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[2].sequencia}" placeholder="sequencia" />
+					<input type="text" class="form-control" id="nome" th:field="*{exercicios_aux[2].repeticoes}" placeholder="repeticao" />
+					<button type="submit" class="btn btn-primary">Adicionar Resultado</button>
+				</div>
 			</form>
 			</div>
 			<div class="card card my-1">
@@ -19,13 +39,39 @@
 			<table class="table">
 				<thead>
 					<tr>
+						<th rowspan="2">Tipo</th>
+						<th rowspan="2">Repeticao</th>
+						<th colspan="3">Exercicio 1</th>
+						<th colspan="3">Exercicio 2</th>
+						<th colspan="3">Exercicio 3</th>
+					</tr>
+					<tr>
 						<th>Nome</th>
-						<th>Serie</th>
-						<th>Repeticoes</th>
+						<th>Sequencia</th>
+						<th>Repeticao</th>
+					
+						<th>Nome</th>
+						<th>Sequencia</th>
+						<th>Repeticao</th>
+						
+						<th>Nome</th>
+						<th>Sequencia</th>
+						<th>Repeticao</th>
 					</tr>
 				</thead>
 				<tbody>
-					
+					<tr th:each="serie : ${series}">
+					 	<td th:text="${serie.tipo}"></td>
+					 	<td th:text="${serie.repeticao}"></td>
+					 	<td th:text="${serie.exercicios_aux[0].nome}"></td>
+					 	<td th:text="${serie.exercicios_aux[0].sequencia}"></td>
+					 	<td th:text="${serie.exercicios_aux[0].repeticoes}"></td>
+					 	<td th:text="${serie.exercicios_aux[1].nome}"></td>
+					 	<td th:text="${serie.exercicios_aux[1].sequencia}"></td>
+					 	<td th:text="${serie.exercicios_aux[1].repeticoes}"></td>
+					 	<td th:text="${serie.exercicios_aux[2].nome}"></td>
+					 	<td th:text="${serie.exercicios_aux[2].sequencia}"></td>
+					 	<td th:text="${serie.exercicios_aux[2].repeticoes}"></td>
 				</tbody>
 			</table>
 		</div>
